# RL_quant

./: .gitignore  AGENTS.md  PROJECT_PLAN.md  README.md  pyproject.toml  requirements.txt
config/: alpha.yml  backtest.yml  data.yml  expression.yml  rl.yml  rl_small.yml  universe.yml  xgboost.yml
docs/: DATA_CLEANING.md  FULL_DATA_INGESTION.md  STAGE3_5_RL_ALPHA_REPRODUCTION_PLAN.md  STAGE6_XGBOOST_CROSS_SECTION_PLAN.md  UNIVERSE_AND_LABELS.md
notebooks/: 01_data_quality.ipynb  02_expression_engine.ipynb  03_rl_alpha_mining.ipynb  04_xgboost_cross_section.ipynb
src/quant_rl_alpha/: __init__.py  cli.py
src/quant_rl_alpha/alpha/: __init__.py  metrics.py  pool.py
src/quant_rl_alpha/data/: __init__.py  akshare_client.py  cache.py  full_ingest.py  labels.py  pipeline.py  quality.py  schema.py  stage2_pipeline.py  universe.py
src/quant_rl_alpha/expression/: __init__.py  action_mask.py  dimensions.py  evaluator.py  operators.py  rpn.py  tokens.py
src/quant_rl_alpha/model/: __init__.py  dataset.py  xgboost_ranker.py
src/quant_rl_alpha/rl/: __init__.py  (+5 more)
tests/: test_action_mask.py  test_akshare_client.py  test_alpha_pool.py  test_calendar.py  test_cli.py  test_data_cache.py  test_data_endpoint.py  test_data_pipeline.py  test_data_quality.py  test_data_schema.py  test_full_ingest.py  test_labels.py  test_metrics.py  test_no_leakage.py  test_operators.py  test_rl_env.py  test_rl_experiment.py  test_rl_policy.py  test_rl_visualization.py  test_rpn.py  test_stage0.py  test_stage2_pipeline.py  test_stage6_dataset.py  test_stage6_xgboost_ranker.py  test_universe.py
(+7 files in other folders)
